fix linkbox overflow

--- a/src/public/css/custom.css
+++ b/src/public/css/custom.css
@@ -198,7 +198,8 @@ fieldset[disabled] .btn-mmwr.active {
   background-color:#b3a275; 
   height:110px;
   width:31%;
-  margin-right:10px;
+  margin-right:3px;
+  margin-left:3px;
   padding-top:18px;
   display:block;
   cursor:pointer;
